tests/paczka1/fuzzy1/35135965.err
Error in line 3: kp5bLnA A510 98,6
Error in line 7: kp5bLnA S468 45,8
Error in line 8: kp5bLnA A693 19,9
Error in line 6: A487 A510 87,1
Error in line 25: JSE A510 16,,
